Fixes #8419.  Removed visibility setting from TextBox style in dijit.css.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@16412 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -419,7 +419,6 @@ table .dijitComboButton .dijitButtonNode {
 	border:0 !important;	
 	margin:0 !important;
 	vertical-align:top !important;
-	visibility:visible !important;
 	background-color:transparent !important;
 	background-image:none !important;
 	width:100% !important;
